--- a/style-nav.css
+++ b/style-nav.css
@@ -2,8 +2,8 @@
 
 .hover {
     background: #242424;
-    background: rgba(36, 36, 36, 0.3);
-    color: magenta;
+    background: rgba(36, 36, 36, 0.7);
+    /* color: magenta; */
     display: flex;
     align-items: flex-end;
     cursor: pointer;
@@ -14,6 +14,12 @@
     z-index: 2;
     transition: background-color 0.2s linear;
     font-family: Lato, sans-serif;
+}
+
+li,
+a {
+    color: magenta;
+    text-decoration: none;
 }
 
 li:nth-child(even) {
