--- a/style-nav.css
+++ b/style-nav.css
@@ -1,3 +1,4 @@
+/* referrence for hover effect https://codepen.io/shshaw/pen/MoxrPV */
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
 
 .hover {
